Tue Sep  2 23:05:35 2003  Tim Janik  <timj@gtk.org>

	* docs/site-download.texi: update beast HOWTO url.

Mon Aug 25 16:11:36 2003  Tim Janik  <timj@gtk.org>

	* autogen.sh: upgrade autoconf dependancy to 2.50.

	* acbeast.m4: add AC_DIVERT_BEFORE_HELP() taken from gtk+,
	to define stuff in configure.in available for help generation.

	* configure.in: port over to autoconf2.57, use configure.h
	as new generated configuartion file.

	* Makefile.am:
	* topconfig.h: provide package-wide configuration results.

	* */*.c: include "topconfig.h" now.

Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstrecords.idl:
        * bsw/Makefile.am:
        * beast-gtk/Makefile.am: renamed *.sfidl to *.idl.

Fri Aug 22 04:22:56 2003  Tim Janik  <timj@gtk.org>

	* acbeast.m4: enable -O2 optimizations for c++ code.

Thu Jul 31 18:15:03 2003  Tim Janik  <timj@gtk.org>

	* added cxxdummy.cc files over the place to force C++ linkage
	of executables.

Tue Jul 29 14:00:37 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsteventroll.[hc]: added support for segment
	display in the canvas.

	* beast-gtk/bsteventrollctrl.[hc]: implement alignment
	tool to align events to a given segment.

	* beast-gtk/bstpartdialog.c: add button and menu item
	to select event-alignment tool.

	* beast-gtk/gxk/gxkutils.c: disabled
	gxk_tree_selection_force_browse() for now, since it aparently
	triggers a segfaulting bug in the Gtk+-2.2.2 treeview.

Mon Jul 28 12:56:40 2003  Tim Janik  <timj@gtk.org>

	* configure.in: rewrote OSS pcm and midi device checks for
	clarity, renamed OSS pcm/midi device options.
	applied changes by Ben Collver <collver1@comcast.net>, to
	check for NetBSD sound devices.

Mon Jul 28 05:25:03 2003  Tim Janik  <timj@gtk.org>

	* acbeast.m4 (ac_vm): enable warning options for C++ code.
	fixed CXXFLAGS setup which was wrongly using CFLAGS.

Mon Jul 28 04:07:08 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/tsmview.c: add test textget handler.
